--- a/src/com/runnerwoo/rfid/locale/Bundle_zh_CN.properties
+++ b/src/com/runnerwoo/rfid/locale/Bundle_zh_CN.properties
@@ -41,7 +41,7 @@ db_time_format=yyyy\u5e74MM\u6708dd\u65e5 a hh:mm
 # Status Bar
 status_default=\u60a8\u597d\uff01
 
-lbl_position=\u4f4d\u7f6e
+db_pos=\u4f4d\u7f6e
 lbl_username=\u7528\u6237\u540d
 lbl_password=\u5bc6\u7801
 
@@ -49,3 +49,9 @@ form_in=\u6dfb\u52a0\u7269\u54c1
 form_out=\u6b63\u5728\u7f16\u8f91\u7269\u54c1
 form_login=\u6b63\u5728\u767b\u5f55...
 login_error=\u7528\u6237\u540d\u6216\u5bc6\u7801\u9519\u8bef\uff01
+txt_no_serial_port=\u7535\u8111\u672a\u8fde\u63a5\u4e32\u53e3\u8bbe\u5907
+title_serial_prot_error=\u4e32\u53e3\u8fde\u63a5\u5f02\u5e38
+txt_select_your_serial_port=\u8bf7\u9009\u62e9\u60a8\u8981\u8fde\u63a5\u7684\u4e32\u53e3\u8bbe\u5907
+title_select_your_serial_port=\u9009\u62e9\u4e32\u53e3
+btn_update_pos=\u66f4\u65b0\u4f4d\u7f6e\u4fe1\u606f
+lbl_find_by_key=\u901a\u8fc7\u5173\u952e\u5b57\u67e5\u627e\uff1a
